# fuzzle

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md
src/: delegate.rs  main.rs  state.rs
src/dirutils/: mod.rs
src/widgets/: autotextbox.rs  icon.rs  listelement.rs  mod.rs
