[package]
name = "launcherrr"
version = "0.1.0"
authors = ["Federico Dolce <psykopear@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { path = "./druid/druid", version = "0.5", features = ["svg"] }
image = "0.23.0"
fuzzy-matcher = "0.3.3"
dirs = "2.0.2"
rust-ini = "0.15.1"
walkdir = "2.3.1"
