[package]
name = "launcherrr"
version = "0.1.0"
authors = ["Federico Dolce <psykopear@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/xi-editor/druid.git", version = "0.5" }
image = "0.23.0"
fuzzy-matcher = "0.3.4"
dirs = "2.0.2"
rust-ini = "0.15.2"
walkdir = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
